--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
 </body>
 
 <script type="text/javascript">
-var main = Elm.fullscreen(Elm.Main, {});
+  var main = Elm.fullscreen(Elm.Main, { cookie : document.cookie || null});
 </script>
 
 </html>
