--- a/static/submit.html
+++ b/static/submit.html
@@ -3,13 +3,29 @@
   <head>
     <meta charset="UTF-8">
     <title>Vote or Die</title>
+    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <style>
+      #textbox {
+        width: 400px;
+      }
+      #titlebox {
+        width: 400px;
+      }
+    </style>
   </head>
 
   <body>
-    <form action='newpost' method='GET'>
-      <input type='text' name='title' placeholder='Title'>
+    <div class='page-header'>
+      <h1>Submit a post</h1>
+    </div>
+    <div class='well'>
+      The syntax for links is [link text](url).
+    </div>
+    <form id='postform' action='newpost' method='GET'>
+      <input id='titlebox' type='text' name='title' placeholder='Title'>
       <div>
-        <textarea required='' name='content'></textarea>
+        <textarea rows=6 id='textbox' required='' name='content'></textarea>
       </div>
       <input type='submit' value='Submit'>
     </form>
