--- a/static/login.html
+++ b/static/login.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Vote or Die</title>
+    <title>
+      Vote!
+    </title>
   </head>
 
   <body>
