--- a/static/submit.html
+++ b/static/submit.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Vote or Die</title>
+    <title>
+      Vote!
+    </title>
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <style>
