--- a/static/submit.html
+++ b/static/submit.html
@@ -23,6 +23,9 @@
     </div>
     <div class='well'>
       The syntax for links is [link text](url).
+
+      You can use <a href='http://share-elm.com/'>share-elm</a> to host your
+      code.
     </div>
     <form id='postform' action='newpost' method='GET'>
       <input id='titlebox' type='text' name='title' placeholder='Title'>
