--- a/static/login.html
+++ b/static/login.html
@@ -5,13 +5,21 @@
     <title>
       Vote!
     </title>
+    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
   </head>
 
   <body>
-    <form action='login' method='post'>
-      <input type='text' name='username' value='' placeholder='CNET ID' required=''>
-      <input type='password' name='password' value='' placeholder='Password' required=''>
-      <input type='submit' value='Login'>
-    </form>
+    <div class='container'>
+      <div class='page-header'>
+        <h1>Login</h1>
+      </div>
+
+      <form action='login' method='post'>
+        <input type='text' name='username' value='' placeholder='CNET ID' required=''>
+        <input type='password' name='password' value='' placeholder='Password' required=''>
+        <input type='submit' value='Login'>
+      </form>
+    </div>
   </body>
 </html>
