--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,11 @@
 </body>
 
 <script type="text/javascript">
-  var main = Elm.fullscreen(Elm.Main, { cookie : document.cookie || null});
+  function getCookie (sKey) {
+    if (!sKey) { return null; }
+    return decodeURIComponent(document.cookie.replace(new RegExp("(?:(?:^|.*;)\\s*" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=\\s*([^;]*).*$)|^.*$"), "$1")) || null;
+  }
+  var main = Elm.fullscreen(Elm.Main, { cookie : getCookie('user') || null});
 </script>
 
 </html>
